--- a/Docs/Configurations.dox
+++ b/Docs/Configurations.dox
@@ -37,6 +37,8 @@
 
 	\note You may also create configurations using sh::Factory::registerConfiguration.
 
+	\note It's perfectly fine if not all of your materials have a 'shadows' property in this example, it will not trigger an error.
+
 	The active Configuration is controlled by the active material scheme in Ogre. So, in order to use the configuration "reflection_targets" for your reflection renders, simply call
 	\code
 	viewport->setMaterialScheme ("reflection_targets");
