--- a/Docs/Configurations.dox
+++ b/Docs/Configurations.dox
@@ -8,23 +8,9 @@
 
 	For this task, the library provides a \a Configuration concept.
 
-	A Configuration is a set of properties that can override the properties of your materials, as long as this Configuration is active.
+	A Configuration is a set of properties that can override global settings, as long as this Configuration is active.
 
-	Here's an example. Say you have a property with the name 'shadows' in your materials that controls if they receive shadows:
-
-	\code
-	material my_base_material
-	{
-		shadows true
-
-		pass
-		{
-			...
-			shadows $shadows
-			...
-		}
-	}
-	\endcode
+	Here's an example. Say you have a global setting with the name 'shadows' that controls if your materials receive they receive shadows.
 
 	Now, lets create a configuration for our reflection render targets that disables shadows for all materials. Paste the following in a new file with the extension '.configuration':
 
@@ -36,8 +22,6 @@
 	\endcode
 
 	\note You may also create configurations using sh::Factory::registerConfiguration.
-
-	\note It's perfectly fine if not all of your materials have a 'shadows' property in this example, it will not trigger an error.
 
 	The active Configuration is controlled by the active material scheme in Ogre. So, in order to use the configuration "reflection_targets" for your reflection renders, simply call
 	\code
