--- a/Docs/Macros.dox
+++ b/Docs/Macros.dox
@@ -174,6 +174,12 @@
 
 	<B>Usage:</B> \@shGlobalSettingEqual(settingName, value)
 
+	\subsection shGlobalSettingString shGlobalSettingString
+
+	Gets replaced with the current value of a given global setting. The value can be set using sh::Factory::setGlobalSetting.
+
+	<B>Usage:</B> \@shGlobalSettingString(settingName)
+
 	\section sharedParams Shared parameters
 
 	\subsection shSharedParameter shSharedParameter
