--- a/Docs/Materials.dox
+++ b/Docs/Materials.dox
@@ -92,7 +92,7 @@
 	#ifdef SH_VERTEX_SHADER
 
 	SH_BEGIN_PROGRAM
-		shUniform(float4x4 wvp) @shAutoConstant(wvp, worldviewproj_matrix)
+		shUniform(float4x4, wvp) @shAutoConstant(wvp, worldviewproj_matrix)
 		shInput(float2, uv0)
 		shOutput(float2, UV)
 	SH_START_PROGRAM
@@ -115,7 +115,7 @@
 
 	\endcode
 
-	There you have it! This shader will compile in all 3 languages (CG, HLSL, GLSL) thanks to the porting macros in "core.h". If you need more porting macros, feel free to add them and don't forget to send them to me!
+	There you have it! This shader will compile in all 3 languages (CG, HLSL, GLSL) thanks to the porting defines in "core.h". If you need more defines, feel free to add them and don't forget to send them to me!
 
 	For a full list of macros available when writing your shaders, refer to the page \ref macros
 
