--- a/Docs/GettingStarted.dox
+++ b/Docs/GettingStarted.dox
@@ -11,14 +11,22 @@
 
 	The source files you want to build are:
 	 - Main/*.cpp
-	 - OgrePlatform/*.cpp
-	 - mcpp/*.c
+	 - Preprocessor/*.cpp (unless you are using the system install of boost::wave, more below)
+	 - Platforms/Ogre/*.cpp
 
 	You can either build the sources as a static library, or simply add the sources to the source tree of your project.
 
 	If you use CMake, you might find the included CMakeLists.txt useful. It builds static libraries with the names "shiny" and "shiny.OgrePlatform".
 
+	\note The CMakeLists.txt is not intended as a stand-alone build system! Instead, you should include this from the main CMakeLists of your project.
+
 	Make sure to link against OGRE and the boost filesystem library.
+
+	If your boost version is older than 1.49, you must set the SHINY_USE_WAVE_SYSTEM_INSTALL variable and additionally link against the boost wave library.
+
+	\code
+	set(SHINY_USE_WAVE_SYSTEM_INSTALL "TRUE")
+	\endcode
 
 	\section code Basic initialisation code
 
@@ -35,12 +43,6 @@
 		"General",                                      // OGRE Resource group to use for creating materials.
 		myApplication.getDataPath() + "/" + "materials"  // Path to look for materials and shaders. NOTE: This does NOT use the Ogre resource system, so you have to specify an absolute path.
 	);
-
-
-	// Optionally, you can enable shader caching.
-	// This will speed up the compilation process of your shaders by writing the microcodes to a file on exit.
-	platform->setShaderCachingEnabled(true);
-	platform->setCacheFolder (myApplication.getCachePath()); // Absolute path to use for shader caching 
 
 	sh::Factory* factory = new sh::Factory(platform);
 
