--- a/Docs/Mainpage.dox
+++ b/Docs/Mainpage.dox
@@ -6,7 +6,7 @@
 	- \ref defining-materials-shaders
 	- \ref macros
 	- \ref configurations
-
+	- \ref lod
 
 	- sh::Factory - the main interface class
 
