--- a/Docs/Materials.dox
+++ b/Docs/Materials.dox
@@ -113,7 +113,7 @@
 		shInput(float2, UV)
 	SH_START_PROGRAM
 	{
-		shOutputColor(0) = shSample(diffuse, UV);
+		shOutputColor(0) = shSample(diffuseMap, UV);
 	}
 
 	#endif
