--- a/Docs/Configurations.dox
+++ b/Docs/Configurations.dox
@@ -21,7 +21,7 @@
 	}
 	\endcode
 
-	\note You may also create configurations using sh::Factory::registerConfiguration.
+	\note You may also create configurations using sh::Factory::createConfiguration.
 
 	The active Configuration is controlled by the active material scheme in Ogre. So, in order to use the configuration "reflection_targets" for your reflection renders, simply call
 	\code
