--- a/Docs/GettingStarted.dox
+++ b/Docs/GettingStarted.dox
@@ -4,7 +4,7 @@
 	\section download Download the source
 
 	\code
-	git clone git@github.com:scrawl/shiny.git
+	git clone git@github.com:OGRECave/shiny.git
 	\endcode
 
 	\section building Build the source
